# clean-web

./: .editorconfig  Cargo.toml  LICENSE.txt  README.md  build.rs  manifest.xml
src/: clipboard.rs  config.rs  main.rs  menu.rs  tray.rs  util.rs  window.rs
