[package]
name = "clean-web"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
directories = "4.0.1"
once_cell = "1.9"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
url = "2.2.2"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1"
